unpackaged/main/default/objects/Phase__c/fields/Active__c.field-meta.xml
<CustomField>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </CustomField>