unpackaged/main/default/objects/Phase__c/fields/Current__c.field-meta.xml
<CustomField>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use to default Phase in the 'Create Item' Utility Bar</inlineHelpText>
        <label>Current?</label>
        <type>Checkbox</type>
    </CustomField>