unpackaged/main/default/objects/Phase__c/fields/Number_of_Items__c.field-meta.xml
<CustomField>
        <fullName>Number_of_Items__c</fullName>
        <label>Number of Items</label>
        <summaryForeignKey>Item__c.Phase__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>