unpackaged/main/default/objects/Phase__c/fields/Number_of_New_Items__c.field-meta.xml
<CustomField>
        <fullName>Number_of_New_Items__c</fullName>
        <label>Number of New Items</label>
        <summaryFilterItems>
            <field>Item__c.Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>Item__c.Phase__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>