unpackaged/main/default/objects/Phase__c/fields/Project__c.field-meta.xml
<CustomField>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Phases</relationshipLabel>
        <relationshipName>Phases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>